<resources>

    <string name="app_name">piggyBank</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_browse_pigs_activicity">BrowsePigsActivicity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_create_piggy">Create Piggy</string>
    <string name="title_activity_register_activty">Register</string>
    <string name="title_activity_detail_piggy">Detail Piggy</string>
    <string name="dni">DNI</string>
    <string name="name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="street_number">num.</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="country">Country</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="put_money_in_piggybank">Deposit</string>
    <string name="amount">Amount</string>
    <string name="new_piggy">(New piggy)</string>
    <string name="create_a_shared_piggy_to">Create a shared Piggy to achieve a goal with whoever you like.  Keep in mind that you are the one that can break open the Piggy!</string>
    <string name="name_your_piggy">Name your Piggy</string>
    <string name="goal">Goal</string>
    <string name="add">Add</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="accept_transfer">Allow %s eurs transfer?</string>
    <string name="pig_shared_with_you">Pig shared with you</string>
    <string name="attention_nfc">Attention</string>
    

</resources>