<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basic_background"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="0dp" >

    <TextView
        android:id="@+id/username_textview"
        style="@style/TextFieldTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pink_text" />

    <EditText
        android:id="@+id/username_edit"
        style="@style/TextFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_edit"
        android:ems="10"
        android:inputType="text"
        android:text="TeoMartinez"
        android:textColor="@color/grey_text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/phonenumber_textview"
        style="@style/TextFieldTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pink_text" />

    <EditText
        android:id="@+id/phonenumber_edit"
        style="@style/TextFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_edit"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/grey_text" />

    <TextView
        android:id="@+id/password_textview"
        style="@style/TextFieldTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pink_text" />

    <EditText
        android:id="@+id/password_edit"
        style="@style/TextFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_edit"
        android:ems="10"
        android:inputType="textPassword"
        android:text="abc"
        android:textColor="@color/grey_text" />

    <TextView
        android:id="@+id/confirm_password_textview"
        style="@style/TextFieldTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pink_text" />

    <EditText
        android:id="@+id/confirm_password_edit"
        style="@style/TextFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_field_down_padding"
        android:background="@drawable/basic_edit"
        android:ems="10"
        android:inputType="textPassword"
        android:text="abc"
        android:textColor="@color/grey_text" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/basic_button"
        android:text="@string/next"
        android:textColor="#ffffff" />

</LinearLayout>
